--- a/javascript/app/templates/top.html
+++ b/javascript/app/templates/top.html
@@ -1,9 +1,12 @@
-<br><br>
+<br>
+<button ng-click='ctrl.nextPage()'>Next Page</button>
+<button ng-click='ctrl.prevPage()'>Previous Page</button>
+<br>
 <div>
   Top Stories:
 </div>
 <br>
 
-<div ng-repeat='a in ctrl.articles[0]'>
+<div ng-repeat='a in ctrl.articles[0] | pageFilter:ctrl.page'>
   <a href="" ui-sref='article({id: a})'>{{a}}</a>
 </div>
