--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,21 +1,25 @@
-<br>
-<button ng-click='ctrl.prevPage()'>Previous Page</button> <br>
-<button ng-click='ctrl.nextPage()'>Next Page</button>
-<br>
+
 <div>
-  Top Stories:
-</div>
-<br>
-{{top}}
-<div ng-repeat='post in top'>
-  <!-- <a href="" ui-sref='article({id: a})'>{{a}}</a> -->
+    <ul class="posts">
+        <li ng-repeat="post in top.posts">
+            <item id="post"></item>
+        </li>
+    </ul>
 
-  <a class="post__title" href="{{ post.data.url }}" target="_blank">
-        {{ post.data.title }}
-    </a>
-    <a class="post__description">
-        {{ post.data.descendants }} comments {{ post.data.score }} points
-    </a>
-</div>
+    <div>
+        <ul class="pagination">
+            <li ng-if="top.page > 0">
+                <a href="" ng-click="top.previousPage()">
+                    << Previous
+                </a>
+            </li>
+            <li ng-if="top.page < top.totalPages - 1">
+                <a href="" ng-click="top.nextPage()">
+                    Next >>
+                </a>
+            </li>
+        </ul>
 
-<!-- | pageFilter:ctrl.page -->
+        <div style="clear: both;"></div>
+    </div>
+</div>
