comments, score, and some css

--- a/views/item.html
+++ b/views/item.html
@@ -1,1 +1,7 @@
-<p>{{item.data.title}}</p>
+<p class="item__title">
+  {{item.data.title}}
+</p>
+<p class="item__description">
+  Comments: {{item.data.descendants}}  Score: {{item.data.score}}
+</p>
+
