--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,7 @@
-<h2>Found the homepage!</h2>
-
 <div>
-  <ul>
+  <ul class="posts">
     <li ng-repeat="story in ctrl.currentPageData">
-      <item id="story"></item>
+      <item class="item" id="story"></item>
     </li>
   </ul>
 </div>
