created item component

--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,2 +1,22 @@
-<h1>Top Stories</h1>
-{{top.stories}}
+<div>
+  <ul>
+    <li ng-repeat="story in top.stories">
+      <item id="story"></item>
+    </li>
+  </ul>
+
+  <div>
+    <ul>
+      <li ng-if="top.page > 0">
+        <a href="" ng-click="top.previousPage()">
+          << Previous Page
+        </a>
+      </li>
+      <li ng-if="top.page < top.totalPages - 1">
+        <a href="" ng-click="top.nextPage()">
+          >> Next Page
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
