fixed angular file path issue/ now new error regarding state undefined

--- a/views/post.html
+++ b/views/post.html
@@ -1,11 +1,11 @@
 <div>
   
   <a href="">
-    {{ post.data.title }}
+    {{ story.data.title }}
   </a>
 
   <a href="">
-    {{ post.data.descendants}} comments {{ post.data.score }} points
+    {{ story.data.descendants}} comments {{ story.data.score }} points
   </a>
 
   <ul>
