--- a/views/top.html
+++ b/views/top.html
@@ -1,6 +1,6 @@
 <ul class='posts'>
   <li ng-repeat="post in top.posts">
-    <post id="post"></post>
+    <thread id="post"></thread>
   </li>  
 </ul>
 
