--- a/views/post.html
+++ b/views/post.html
@@ -1,8 +1,8 @@
 <div class="post">
   <a href="{{ post.data.url }}" target="_blank" class="post__title">{{ post.data.title }}</a>
   <div class="post__description">
-    Author - {{ post.data.by }}
-    Score - {{ post.data.score }}
+    Author - {{ post.data.by }} |
+    Score - {{ post.data.score }} |
     Date Posted: {{ post.data.time | date: 'short'}}
   </div>
 
