--- a/views/post.html
+++ b/views/post.html
@@ -1,14 +1,14 @@
-<div ng-if="story.data">
+<div class="post" ng-if="story.data">
   
-  <a href="{{post.data.url}}">
+  <a class="post__title" href="{{post.data.url}}">
     {{ story.data.title }}
   </a>
 
-  <a href="">
+  <a class="post__description" href="">
     {{ story.data.descendants}} comments {{ story.data.score }} points
   </a>
 
-  <ul>
+  <ul class="comments">
     <li ng-repeat="comment in story.data.kids">
       <item id="comment"></item>
     </li>
