--- a/js/app/views/top.html
+++ b/js/app/views/top.html
@@ -1,1 +1,8 @@
 top.html
+<div ng-controller="TopStoriesController as ctrl">
+  <ul>
+    <li ng-repeat="story in ctrl.topStories">
+      {{ story }}
+    </li>
+  </ul>
+</div>
