--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -1,1 +1,1 @@
-<a href="{{ story.story.url }}">{{ story.story.title }}</a> - Comments: {{ story.story.kids.length }} - [<em>Score: {{ story.story.score }}</em>] - <a href="#/post/{{story.story.id}}">Read More</a>
+<a href="{{ story.story.url }}" class="item__title">{{ story.story.title }}</a> - Comments: {{ story.story.kids.length }} - [<em>Score: {{ story.story.score }}</em>] - <a href="#/post/{{story.story.id}}">Read More</a>
