--- a/views/top.html
+++ b/views/top.html
@@ -1,1 +1,11 @@
 <h1>Top Stories:</h1>
+
+<div>
+
+  <ul class="posts">
+    <li ng-repeat="post in top.posts">
+      <item id="post">{{ post }}</item>
+    </li>
+  </ul>
+
+</div>
