added component for comment and can display basic story info(posted by, url, title, comments)

--- a/views/post.html
+++ b/views/post.html
@@ -1,1 +1,19 @@
-<a ui.sref="top"></a>
+<div class="post-container">
+<!-- Post Info -->
+  <h3> {{post.data.title}} </h3>
+  <p>
+    <strong>URL:</strong> {{post.data.url}}
+  </p>
+  <p>
+    <strong>Score:</strong> {{post.data.score}}
+  </p>
+  <hr>
+
+<!-- Comments -->
+  <h5>Comments</h5>
+
+  <div class="comments" ng-repeat="id in post.data.kids">
+    <comment id="id"></comment>
+  </div>
+
+</div>
