Item and PostsService working

--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -4,7 +4,7 @@
 
   <ul class="posts">
     <li ng-repeat="post in top.posts">
-      <item id="post">{{ post }}</item>
+      <item id="post"></item>
     </li>
   </ul>
 
