--- a/views/item.html
+++ b/views/item.html
@@ -1,3 +1,18 @@
 <div class="item" ng-if="item.data">
-  <p>item {{ item.id }}</p>
+  <div ng-switch="item.data.type"> <!-- switch case, using data type -->
+
+    <div ng-switch-when="comment">
+      comment
+    </div>
+
+    <div ng-switch-when="story">
+      <a class="item__title" href="{{ item.data.url }}" target="_blank">
+        {{ item.data.title }}
+      </a>
+      <a class="item__description" ui-sref="post({id: item.data.id})"> <!-- ui-router url helper to automatically create link -->
+				{{ item.data.descendants }} comments {{ item.data.score }} points
+			</a>
+    </div>
+
+  </div>
 </div>
