--- a/views/top.html
+++ b/views/top.html
@@ -5,10 +5,10 @@
 <div>
   <ul class="pagination">
     <li ng-if="top.prevPage">
-      <a href="" name="prev" ng-click="top.getPrevPage()">Previous</a>
+      <a href="" name="prev" ng-click="top.getPrevPage()"><< Previous</a>
     </li>
     <li ng-if="top.nextPage">
-      <a href="" name="next" ng-click="top.getNextPage()">Next</a>
+      <a href="" name="next" ng-click="top.getNextPage()">Next >></a>
     </li>
   </ul>
   <div style="clear: both;"></div>
