pagination working but no links yet

--- a/views/posts.html
+++ b/views/posts.html
@@ -3,4 +3,5 @@
   Score: {{story.score}}
   <a href="{{story.url}}">{{story.url}}</a>
   Comments: {{story.descendants}}
+  <a href="" ui-sref="post({id: story.id})">Show</a>
 </div>
