comments directive functional

--- a/views/post.html
+++ b/views/post.html
@@ -2,3 +2,5 @@
   Score: {{single.score}}
   <a href="{{single.url}}">{{single.url}}</a>
   Comments: {{single.descendants}}
+  Comments: {{single.kids}}
+  <comments kids="single.kids"></comments>
