--- a/views/comments.html
+++ b/views/comments.html
@@ -1,7 +1,6 @@
-<!-- Comment: {{ctrl.allComments[0].text}} -->
 <ul>
-  <li ng-repeat="comment in ctrl.allComments">
-    {{comment.text}}
+  <li class="comments" ng-repeat="comment in ctrl.allComments">
+    <div ng-bind-html="comment.text"></div>
     <ul ng-if="comment.kids">
     can probably just call the directive here
       <comments kids="comment.kids"></comments>
