--- a/views/posts.html
+++ b/views/posts.html
@@ -1,10 +1,11 @@
 <a href="" ui-sref="pages({id: (page - 1)})">Previous</a>
 <a href="" ui-sref="pages({id: (page + 1)})">Next</a>
-<div ng-repeat="story in stories">
-  <div class="item__title"> Title: {{story.title}} </div>
-  Score: {{story.score}}
-  <a href="{{story.url}}">{{story.url}}</a>
-  Comments: {{story.descendants}}
+<div class="posts" ng-repeat="story in stories">
+  <div class="post__title"> Title: {{story.title}} </div>
+  Score: {{story.score}} |
+  <a href="{{story.url}}">{{story.url}}</a> |
+  Comments: {{story.descendants}} |
+  Time Posted: {{story.time | date:'MMM-dd HH:mm'}} |
   <a href="" ui-sref="post({id: story.id})">Show</a>
 </div>
 
