service working.  directive not

--- a/views/posts.html
+++ b/views/posts.html
@@ -1,4 +1,9 @@
 <h1>POSTS EVERYONE!</h1>
 <div ng-repeat="story in ctrl.top_stories_slice">
-  <p>{{ story }}</p>
+  <span class="story_number">{{ ctrl.start + $index + 1}}:</span>
+  <article id={{story}}>
+    <span class="story"></span>
+  </article>
 </div>
+<div ng-if="ctrl.nextable()" ng-click="ctrl.serveNext()">Next</div>
+<div ng-if="ctrl.prevable()" ng-click="ctrl.servePrev()">Previous</div>
