links, users, time, points displaying

--- a/views/posts.html
+++ b/views/posts.html
@@ -1,9 +1,12 @@
 <h1>POSTS EVERYONE!</h1>
-<div ng-repeat="story in ctrl.top_stories_slice">
+<div ng-repeat="story in ctrl.these_top_stories">
   <span class="story_number">{{ ctrl.start + $index + 1}}:</span>
-  <article id={{story}}>
-    <span class="story"></span>
-  </article>
+  <span class="story">
+    <a href="{{ story.url }}">{{ story.title }}</a>
+  </span>
+  <span class="points">({{ story.score }} points,</span>
+  <span class="poster">by {{ story.by }},</span>
+  <span class="time">at {{ story.time | date:'short' }})</span>
 </div>
 <div ng-if="ctrl.nextable()" ng-click="ctrl.serveNext()">Next</div>
 <div ng-if="ctrl.prevable()" ng-click="ctrl.servePrev()">Previous</div>
