--- a/views/posts.html
+++ b/views/posts.html
@@ -4,9 +4,12 @@
   <span class="story">
     <a href="{{ story.url }}">{{ story.title }}</a>
   </span>
-  <span class="points">({{ story.score }} points,</span>
-  <span class="poster">by {{ story.by }},</span>
-  <span class="time">at {{ story.time | date:'short' }})</span>
+  <span id="comments">
+    <a ui-sref="post({id: story.id })">({{ story.descendants }} comments,</a>
+  </span>
+  <span id="points">{{ story.score }} points,</span>
+  <span id="poster">by {{ story.by }},</span>
+  <span id="time">at {{ story.time | date:'short' }})</span>
 </div>
 <div ng-if="ctrl.nextable()" ng-click="ctrl.serveNext()">Next</div>
 <div ng-if="ctrl.prevable()" ng-click="ctrl.servePrev()">Previous</div>
