--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,5 +1,7 @@
 <h1>Top Stories</h1>
 
-<ul class="posts">
-  <li ng-repeat="post in top.posts">
-</ul>
+<div>
+  <ul class="posts">
+    <li ng-repeat="post in top.posts">{{ post }}</li>
+  </ul>
+</div>
