--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -2,6 +2,8 @@
 
 <div>
   <ul class="posts">
-    <li ng-repeat="post in top.posts">{{ post }}</li>
+    <li ng-repeat="post in top.posts">
+      <item id="post"></item>
+    </li>
   </ul>
 </div>
