--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -7,3 +7,20 @@
     </li>
   </ul>
 </div>
+
+<div>
+  <ul class="pagination">
+    <li ng-if="top.page > 0">
+      <a href="" ng-click="top.prevPage()">
+        << Previous
+      </a>
+    </li>
+
+    <li ng-if="top.page < top.totalPages - 1">
+      <a href="" ng-click="top.nextPage()">
+      Next >>
+      </a>
+    </li>
+  </ul>
+  <div style="clear: both;"></div>
+</div>
