--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -12,13 +12,13 @@
   <ul class="pagination">
     <li ng-if="top.page > 0">
       <a href="" ng-click="top.prevPage()">
-        << Previous
+        Previous Posts
       </a>
     </li>
 
     <li ng-if="top.page < top.totalPages - 1">
       <a href="" ng-click="top.nextPage()">
-      Next >>
+      Next Posts
       </a>
     </li>
   </ul>
