topstories view loads, nav works, need to work on displaying posts

--- a/views/topstories.html
+++ b/views/topstories.html
@@ -1,3 +1,18 @@
-<p>
-    {{ stories.topStories}}
-</p>
+<div>
+    <p>Page: {{ top.pgNumber + 1 }}</p>
+    <ul class="posts">
+        <li ng-repeat="post in top.thisPage">
+
+            <item id="post">ITEMS</item>
+        </li>
+    </ul>
+
+</div>
+
+<div class="navigation">
+    <a href="" ng-if="top.pgNumber > 0" ng-click="top.prevPage()">Previous Page</a>
+
+   
+    <a href="" ng-if="top.totPages != top.pgNumber" ng-click="top.nextPage()">Next Page</next-pg>
+
+</div>
