--- a/views/topstories.html
+++ b/views/topstories.html
@@ -2,8 +2,7 @@
     <p>Page: {{ top.pgNumber + 1 }}</p>
     <ul class="posts">
         <li ng-repeat="post in top.thisPage">
-
-            <item id="post">ITEMS</item>
+            <item id="post"></item>
         </li>
     </ul>
 
