--- a/templates/stories.html
+++ b/templates/stories.html
@@ -1,4 +1,4 @@
-
+<header><h1>Top Stories</h1></header>
 <div ng-repeat='story in ctrl.topStories'>
   <story-card storyid="story"></story-card>
 </div>
