--- a/templates/stories.html
+++ b/templates/stories.html
@@ -1,4 +1,11 @@
-<header><h1>Top Stories</h1></header>
-<div ng-repeat='story in ctrl.topStories'>
-  <story-card storyid="story"></story-card>
-</div>
+
+
+  <ul class='posts'>
+    <li ng-repeat='story in ctrl.pageStories'><story-card storyid="story"></story-card></li>
+  </ul>
+
+  <ul class='pagination'>
+    <li ng-if='ctrl.startPage > 0' ng-click='ctrl.prevPage()'><a>prev</a></li>
+    <li ng-if='ctrl.endPage < ctrl.totalStories - 1' ng-click='ctrl.nextPage()'><a>next</a></li>
+  </ul>
+
