post url view working

--- a/views/post.html
+++ b/views/post.html
@@ -1,3 +1,8 @@
-<h2>Post:</h2>
+<h2>Story:</h2>
 
-<!-- ctrl.whatever -->
+<top-story 
+  url="ctrl.story.url"
+  id="ctrl.story.id"
+  title="ctrl.story.title"
+  score="ctrl.story.score"
+  comments="ctrl.story.kids.length" />
