--- a/views/topstories.html
+++ b/views/topstories.html
@@ -4,6 +4,7 @@
   <li ng-repeat="story in ctrl.fullTopStories">
     <top-story 
       url="story.url"
+      id="story.id"
       title="story.title"
       score="story.score"
       comments="story.kids.length" />
