--- a/views/topstories.html
+++ b/views/topstories.html
@@ -1,6 +1,6 @@
 <h2>Top Stories</h2>
 
-<ul>
+<ul class="item">
   <li ng-repeat="story in ctrl.fullTopStories">
     <top-story 
       url="story.url"
@@ -12,4 +12,4 @@
 </ul>
 
 
-<a href="" ng-click="ctrl.nextSlice()">Next</a> - <a href="" ng-click="ctrl.prevSlice()">Previous</a>
+<a class="pagination" href="" ng-click="ctrl.nextSlice()">Next</a> - <a class="pagination" href="" ng-click="ctrl.prevSlice()">Previous</a>
