cleaned up styling, added additional CSS

--- a/views/item.html
+++ b/views/item.html
@@ -1,4 +1,4 @@
-<div ng-if="post.data.type === 'story'" class="post">
+<div ng-if="post.data.type === 'story'" class="item">
   <div class="posts">
     <div class="post">
       <a href="" ui-sref="post({id: post.data.id})">{{ post.data.title }}</a><br/>
