--- a/views/story.html
+++ b/views/story.html
@@ -1,3 +1,7 @@
-<h2><a href="{{story.data.url}}" target="_blank">{{story.data.title}}</a></h2>
+<div class="item">
 
-<p>{{story.data.score}} points by {{story.data.by}} | <a ui-sref="post({id: story.data.id})">{{story.data.descendants}} comments</a></p>
+  <h2><a class="item__title" href="{{story.data.url}}" target="_blank">{{story.data.title}}</a></h2>
+
+  <p class="item__description">{{story.data.score}} points by {{story.data.by}} | <a ui-sref="post({id: story.data.id})">{{story.data.descendants}} comments</a></p>
+
+</div>
