--- a/views/post.html
+++ b/views/post.html
@@ -1,1 +1,10 @@
+<div class="mainstory">
 <story id="postCtrl.story.id"></story>
+</div>
+<div class="comments">
+  <ul class="posts">
+    <li ng-repeat="kid in postCtrl.story.kids">
+      <comment id="kid"> </comment>
+    </li>
+  </ul>
+</div>
