changed some var names

--- a/views/top.html
+++ b/views/top.html
@@ -1,6 +1,6 @@
 <div class="">
   <ul>
-    <li ng-repeat="post in top.posts">
+    <li ng-repeat="post in top.data">
       <item id="post"></item>
     </li>
   </ul>
