--- a/views/top.html
+++ b/views/top.html
@@ -1,7 +1,16 @@
 <div class="">
   <ul>
     <li ng-repeat="post in top.posts">
-      <item id="post"></item>
+      <item id="post">{{ post }}</item>
+    </li>
+  </ul>
+
+  <ul>
+    <li ng-if="top.currentPage > 0">
+      <a ng-click="top.previousPage()">Previous 30</a>
+    </li>
+    <li ng-if="top.currentPage < top.totalPages - 1">
+      <a ng-click="top.nextPage()">Next 30</a>
     </li>
   </ul>
 </div>
