--- a/views/post.html
+++ b/views/post.html
@@ -1,5 +1,5 @@
 <h2><a href="{{ post.data.url }}">{{ post.data.title }}</a></h2>
 
 <p>
-  descendants {{ post.data.descendants }} | score {{ post.data.score }}
+  descendants {{ post.data.descendants }} | <a ui-sref="post({ id: post.data.id })">comments score {{ post.data.score }}</a>
 </p>
