--- a/views/top.html
+++ b/views/top.html
@@ -1,7 +1,7 @@
 <div class="">
   <ul>
     <li ng-repeat="post in top.posts">
-      <a ui-sref="post({ id: post })">{{ post }}</a>
+      <item id="post"></item>
     </li>
   </ul>
 
