--- a/views/item.html
+++ b/views/item.html
@@ -1,20 +1,24 @@
-<div ng-switch="item.data.type">
+<div class="item" ng-switch="item.data.type">
   <div ng-switch-when="comment">
     <div ng-bind-html="item.data.text"></div>
     <p>
       - submitted by: {{ item.data.by }} at {{ item.data.time * 1000 | date: 'short' }} -
       <div ng-if="item.data.kids.length > 0">
-        <a ui-sref="post({ id: item.id })">{{ item.data.kids.length }} comments</a>
+        <ul class="comments">
+          <li ng-repeat="comment in item.data.kids">
+            <item id="comment"></item>
+          </li>
+        </ul>
       </div>
     </p>
 
   </div>
 
   <div ng-switch-when="story">
-    <a ui-sref="post({ id: item.id })">{{ item.data.title }}</a> | <a href="{{ item.data.url }}">{{ item.data.url }}</a>
-    <p>
+    <a ui-sref="post({ id: item.id })" class="item__title">{{ item.data.title }}</a> | <a href="{{ item.data.url }}">{{ item.data.url }}</a>
+    <div class="item__description">
       submitted by: {{ item.data.by }} at {{ item.data.time * 1000 | date: 'short' }} | descendants: {{ item.data.descendants }} | comments score: {{ item.data.score }}
-    </p>
+    </div>
 
   </div>
 </div>
