--- a/app.css
+++ b/app.css
@@ -130,3 +130,24 @@ html, body {
 .comments li + li {
 	margin-top: 20px;
 }
+
+.paginationclass{
+
+margin: 19px 28px;
+}
+.paginationclass span{
+    margin-left:15px;
+    display:inline-block;
+}
+.pagination-controle li{
+    display: inline-block;
+}
+.pagination-controle button{
+    font-size: 12px;
+    margin-top: -26px;
+    cursor:pointer;
+
+}
+.pagination{
+    margin:5px 12px !important;
+}
