--- a/views/post.html
+++ b/views/post.html
@@ -2,8 +2,10 @@
   <div class="posts col-md-8 col-md-offset-2 well">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
     <p>{{ post.kids.length + " comments" }} | {{ post.score + " points"}}</p>
-    <div class="well">
-      Comment section
-    </div>
+    <ul class="comments">
+  		<li ng-repeat="comment in post.kids">
+  			<comment id="comment"></comment>
+  		</li>
+  	</ul>
   </div>
 </div>
