--- a/app.css
+++ b/app.css
@@ -17,7 +17,7 @@ html, body {
 .header__fixed {
 	background: #3661A2;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	position: fixed;
+	position: absolute;
 	height: inherit;
 	top: 0;
 	left: 0;
