--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,5 +1,3 @@
-<div ng-controller="topStoriesController">
-  <ul>
-    <li ng-repeat="post in posts">{{post}}</li>
-  </ul>
-</div>
+<ul>
+  <li ng-repeat="post in top.posts">{{post}}</li>
+<ul>
