Reformatted the Post view, included points, author, and comments

--- a/views/post.html
+++ b/views/post.html
@@ -1,5 +1,4 @@
 <div>
-  <a href="{{post.data.url}}">
-    {{post.data.title}}
-  </a>
+  <br><a href="{{post.data.url}}">{{post.data.title}}</a>
+  <br>{{post.data.score}} points by {{post.data.by}} | {{post.data.descendants}} comments
 </div>
