adds time ago to Story Directive

--- a/views/story.html
+++ b/views/story.html
@@ -9,5 +9,5 @@
                   'other': '{} points'
                 }">
   </ng-pluralize>
-  by {{ vm.author }}
+  by {{ vm.author }} {{ vm.time }}
 </div>
