adds number of comments to story directive template

--- a/views/story.html
+++ b/views/story.html
@@ -9,5 +9,5 @@
                   'other': '{} points'
                 }">
   </ng-pluralize>
-  by {{ vm.author }} {{ vm.time }} | <a href="" class="hide">Hide</a>
+  by {{ vm.author }} {{ vm.time }} | <a href="" class="hide">Hide</a> | {{ vm.numComments }}
 </div>
