--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,6 +1,12 @@
 <h2>Here are the top stories</h2>
-<ol>
-  <li ng-repeat="story in vm.stories">
-    <story id="story"></story>
+<ul class="list pl0">
+  <li class="cf" dir-paginate="story in vm.stories | itemsPerPage: 30">
+    <div class="fl pr2 w-10 mw2 tr">
+      {{ vm.stories.indexOf(story) + 1 }}. 
+    </div>
+    <div class="fl w-90">
+      <story id="story"></story>
+    </div>
   </li>
-</ol>
+</ul>
+<dir-pagination-controls></dir-pagination-controls>
